Portifólio html atualizado

--- a/contato.html
+++ b/contato.html
@@ -72,20 +72,21 @@
 
     </main>
 
-    <!-- Rodapé da Página-->
-    <footer>
-        <div>
-            <a href="https://linkedin.com" target="_blank">
-                <img src="assets/images/linkedin.png" alt="Linkedin">
-            </a>
-            <a href="https://github.com" target="_blank">
-                <img src="assets/images/github.png" alt="Github">
-            </a>
-            <a href="https://instagram.com" target="_blank">
-                <img src="assets/images/instagram.png" alt="Instagram">
-            </a>
-        </div>
-        <p>Desenvolvido por : João Vitor Moreira - 2023 &copy;</p>
-    </footer>
+   <!-- Rodapé da Página-->
+   <footer>
+    <div>
+        <a href="https://www.linkedin.com/in/moreira-joao-vitor/" target="_blank">
+            <img src="assets/images/linkedin.png" alt="Linkedin">
+        </a>
+        <a href="https://github.com/JOAOVITORMOREIRA" target="_blank">
+            <img src="assets/images/github.png" alt="Github">
+        </a>
+        <a href="https://www.instagram.com/joao.vitor.moreira93/" target="_blank">
+            <img src="assets/images/instagram.png" alt="Instagram">
+        </a>
+    </div>
+    <p>Desenvolvido por : João Vitor Moreira - 2023 &copy;</p>
+</footer>
 </body>
+
 </html>
