--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
         <h1 id="perfil">Sobre o João:</h1>
         <section>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus temporibus deleniti quaerat,
-                    tenetur ab ipsa omnis quis harum illo soluta quo sapiente commodi natus nisi ipsam distinctio
-                    perferendis quasi unde!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus temporibus deleniti quaerat,
-                    tenetur ab ipsa omnis quis harum illo soluta quo sapiente commodi natus nisi ipsam distinctio
-                    perferendis quasi unde!</p>
-
+                <p>Sou um profissional com formação técnica em arquivologia, mas meu interesse e curiosidade pela
+                    tecnologia foram despertados em 2021, graças à influência de amigos. Desde então, tenho pesquisado e
+                    estudado constantemente sobre a área tech, buscando aprimorar meus conhecimentos e habilidades. No
+                    segundo semestre de 2022, decidi me aprofundar ainda mais e me matriculei em Análise e
+                    Desenvolvimento de Sistemas na Faculdade Impacta de Tecnologia. Em março de 2023, fui contemplado
+                    com uma bolsa no Bootcamp Desenvolvedor Java Fullstack Junior, oferecido pela Generetion Brasil. Com
+                    habilidades em resolução de problemas, trabalho em equipe, comunicação e flexibilidade, estou em
+                    busca de oportunidades para aplicar meus conhecimentos em tecnologia e contribuir para projetos
+                    inovadores.</p>
             </div>
             <img src="assets/images/goku.jpg" alt="Olá eu sou o João Vitor">
         </section>
@@ -63,13 +65,13 @@
     <!-- Rodapé da Página-->
     <footer>
         <div>
-            <a href="https://linkedin.com" target="_blank">
+            <a href="https://www.linkedin.com/in/moreira-joao-vitor/" target="_blank">
                 <img src="assets/images/linkedin.png" alt="Linkedin">
             </a>
-            <a href="https://github.com" target="_blank">
+            <a href="https://github.com/JOAOVITORMOREIRA" target="_blank">
                 <img src="assets/images/github.png" alt="Github">
             </a>
-            <a href="https://instagram.com" target="_blank">
+            <a href="https://www.instagram.com/joao.vitor.moreira93/" target="_blank">
                 <img src="assets/images/instagram.png" alt="Instagram">
             </a>
         </div>
