--- a/contato.html
+++ b/contato.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="assets/images/goku_ico.png">
-    <title>Portifólio João Vitor Moreira</title>
+    <link rel="icon" type="image/png" href="assets/images/joao_ico.png">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Portifólio João Vitor</title>
 </head>
 
 <body>
     <!-- Menu da Página -->
     <nav>
         <!-- Logo + Texto a esquerda do menu -->
-        <div>
-            <img src="assets/images/goku_ico.png" alt="Logo da página - Goku">
-            <span>Portifólio João Vitor Moreira</span>
+        <div class="logo">
+            <img class="icone" src="assets/images/joao_ico.png" alt="Logo da página - João">
+            <span class="titulo">Portifólio João Vitor Moreira</span>
         </div>
         <!-- Opções do menu utilizando marcadores não ordenados (simbolico) -->
         <ul>
@@ -29,21 +30,21 @@
     </nav>
 
     <!-- Conteúdo da Página -->
-    <main>
-        <section>
-            <h2>Contato</h2>
+    <main class="contato">
+        <section class="formulario">
+            <h3>Contato</h3>
             <form>
-                <div>
+                <div class="campos-form">
                     <label for="nome">Nome:</label>
                     <input id="nome" type="text" placeholder="Insira o seu nome completo...">
                     <div id="txtNome"></div>
                 </div>
-                <div>
+                <div class="campos-form">
                     <label for="email">E-mail:</label>
                     <input id="email" type="text" placeholder="Insira o seu e-mail...">
                     <div id="txtEmail"></div>
                 </div>
-                <div>
+                <div class="campos-forma">
                     <label for="mensagem">Mensagem:</label>
                     <textarea id="mensagem" type="text" rows="8" placeholder="Insira o sua mensagem..."></textarea>
                     <div id="txtMensagem"></div>
@@ -52,41 +53,41 @@
             </form>
         </section>
         <section>
-            <h2>Não sabe seu CEP?</h2>
-            <form>
-                <div>
+            <h3>Consultar CEP</h3>
+            <div class="endereco">
+                <div class="campos-form">
                     <label for="cep">Digite o seu CEP:</label>
                     <input id="cep" type="text" placeholder="Insira o seu CEP...">
                     <div id="txtCep"></div>
                     <button type="button" cep()>Consultar</button>
                     <hr></hr>
                 </div>
-                <div>
+                <div class="campos-form">
                     <label for="endereco">Endereço:</label>
                     <textarea id="endereco" type="text" rows="7" placeholder="Busca CEP..."></textarea>
                     <div id="txtEndereço"></div>
                 </div>
-            </form>
+            </div>
 
         </section>
 
     </main>
 
-   <!-- Rodapé da Página-->
-   <footer>
-    <div>
-        <a href="https://www.linkedin.com/in/moreira-joao-vitor/" target="_blank">
-            <img src="assets/images/linkedin.png" alt="Linkedin">
-        </a>
-        <a href="https://github.com/JOAOVITORMOREIRA" target="_blank">
-            <img src="assets/images/github.png" alt="Github">
-        </a>
-        <a href="https://www.instagram.com/joao.vitor.moreira93/" target="_blank">
-            <img src="assets/images/instagram.png" alt="Instagram">
-        </a>
-    </div>
-    <p>Desenvolvido por : João Vitor Moreira - 2023 &copy;</p>
-</footer>
+    <!-- Rodapé da Página-->
+    <footer>
+        <div class="redes_sociais">
+            <a href="https://www.linkedin.com/in/moreira-joao-vitor/" target="_blank">
+                <img class="icons" src="assets/images/linkedin.png" alt="Linkedin">
+            </a>
+            <a href="https://github.com/JOAOVITORMOREIRA" target="_blank">
+                <img class="icons" src="assets/images/github.png" alt="Github">
+            </a>
+            <a href="https://www.instagram.com/joao.vitor.moreira93/" target="_blank">
+                <img class="icons" src="assets/images/instagram.png" alt="Instagram">
+            </a>
+        </div>
+        <p class="by">Desenvolvido por : João Vitor Moreira - 2023 &copy;</p>
+    </footer>
 </body>
 
 </html>
