--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="assets/images/goku_ico.png">
-    <title>Portifólio João Vitor Moreira</title>
+    <link rel="icon" type="image/png" href="assets/images/joao_ico.png">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Portifólio João Vitor</title>
 </head>
 
 <body>
     <!-- Menu da Página -->
     <nav>
         <!-- Logo + Texto a esquerda do menu -->
-        <div>
-            <img src="assets/images/goku_ico.png" alt="Logo da página - Goku">
-            <span>Portifólio João Vitor Moreira</span>
+        <div class="logo">
+            <img class="icone" src="assets/images/joao_ico.png" alt="Logo da página - Goku">
+            <span class="titulo">Portifólio João Vitor Moreira</span>
         </div>
         <!-- Opções do menu utilizando marcadores não ordenados (simbolico) -->
         <ul>
@@ -37,7 +38,7 @@
     <!-- Conteúdo da Página -->
     <main>
         <h1 id="perfil">Sobre o João:</h1>
-        <section>
+        <section id="sobre">
             <div>
                 <p>Sou um profissional com formação técnica em arquivologia, mas meu interesse e curiosidade pela
                     tecnologia foram despertados em 2021, graças à influência de amigos. Desde então, tenho pesquisado e
@@ -49,12 +50,12 @@
                     busca de oportunidades para aplicar meus conhecimentos em tecnologia e contribuir para projetos
                     inovadores.</p>
             </div>
-            <img src="assets/images/goku.jpg" alt="Olá eu sou o João Vitor">
+            <img class="foto" src="assets/images/joao.png" alt="Olá eu sou o João Vitor">
         </section>
         <h1 id="video">Vídeo</h1>
         <section>
-            <h2>Vídeo do Momento</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/2o_MPASoLC4"
+            <h2>Vídeo do Momento:</h2>
+            <iframe id="videoyt" width="560" height="315" src="https://www.youtube.com/embed/2o_MPASoLC4"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
@@ -64,18 +65,18 @@
 
     <!-- Rodapé da Página-->
     <footer>
-        <div>
+        <div class="redes_sociais">
             <a href="https://www.linkedin.com/in/moreira-joao-vitor/" target="_blank">
-                <img src="assets/images/linkedin.png" alt="Linkedin">
+                <img class="icons" src="assets/images/linkedin.png" alt="Linkedin">
             </a>
             <a href="https://github.com/JOAOVITORMOREIRA" target="_blank">
-                <img src="assets/images/github.png" alt="Github">
+                <img class="icons" src="assets/images/github.png" alt="Github">
             </a>
             <a href="https://www.instagram.com/joao.vitor.moreira93/" target="_blank">
-                <img src="assets/images/instagram.png" alt="Instagram">
+                <img class="icons" src="assets/images/instagram.png" alt="Instagram">
             </a>
         </div>
-        <p>Desenvolvido por : João Vitor Moreira - 2023 &copy;</p>
+        <p class="by">Desenvolvido por : João Vitor Moreira - 2023 &copy;</p>
     </footer>
 </body>
 
