--- a/contato.html
+++ b/contato.html
@@ -16,7 +16,7 @@
         <!-- Logo + Texto a esquerda do menu -->
         <div class="logo">
             <img class="icone" src="assets/images/joao_ico.png" alt="Logo da página - João">
-            <span class="titulo">Portifólio João Vitor Moreira</span>
+            <span class="titulo">Portifólio João Vitor</span>
         </div>
         <!-- Opções do menu utilizando marcadores não ordenados (simbolico) -->
         <ul>
@@ -36,12 +36,12 @@
             <form>
                 <div class="campos-form">
                     <label for="nome">Nome:</label>
-                    <input id="nome" type="text" placeholder="Insira o seu nome completo...">
+                    <input onkeyup="validarNome()" id="nome" type="text" placeholder="Insira o seu nome completo...">
                     <div id="txtNome"></div>
                 </div>
                 <div class="campos-form">
                     <label for="email">E-mail:</label>
-                    <input id="email" type="text" placeholder="Insira o seu e-mail...">
+                    <input onkeyup="validarEmailRegEx()" id="email" type="text" placeholder="Insira o seu e-mail...">
                     <div id="txtEmail"></div>
                 </div>
                 <div class="campos-forma">
@@ -49,7 +49,7 @@
                     <textarea id="mensagem" type="text" rows="8" placeholder="Insira o sua mensagem..."></textarea>
                     <div id="txtMensagem"></div>
                 </div>
-                <button type="enviar">Enviar</button>
+                <button onclick="eviarFormulario()" type="button">Enviar</button>
             </form>
         </section>
         <section>
@@ -59,7 +59,7 @@
                     <label for="cep">Digite o seu CEP:</label>
                     <input id="cep" type="text" placeholder="Insira o seu CEP...">
                     <div id="txtCep"></div>
-                    <button type="button" cep()>Consultar</button>
+                    <button onclick="consultarCep()" type="button" cep()>Consultar</button>
                     <hr></hr>
                 </div>
                 <div class="campos-form">
@@ -88,6 +88,7 @@
         </div>
         <p class="by">Desenvolvido por : João Vitor Moreira - 2023 &copy;</p>
     </footer>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
