--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Logo + Texto a esquerda do menu -->
         <div class="logo">
             <img class="icone" src="assets/images/joao_ico.png" alt="Logo da página - Goku">
-            <span class="titulo">Portifólio João Vitor Moreira</span>
+            <span class="titulo">Portifólio João Vitor</span>
         </div>
         <!-- Opções do menu utilizando marcadores não ordenados (simbolico) -->
         <ul>
