--- a/contato.html
+++ b/contato.html
@@ -49,7 +49,7 @@
                     <textarea id="mensagem" type="text" rows="8" placeholder="Insira o sua mensagem..."></textarea>
                     <div id="txtMensagem"></div>
                 </div>
-                <button onclick="eviarFormulario()" type="button">Enviar</button>
+                <button onclick="enviarFormulario()" type="button">Enviar</button>
             </form>
         </section>
         <section>
@@ -57,10 +57,10 @@
             <div class="endereco">
                 <div class="campos-form">
                     <label for="cep">Digite o seu CEP:</label>
-                    <input id="cep" type="text" placeholder="Insira o seu CEP...">
+                    <input id="cep" name="cep" type="text" placeholder="Insira o seu CEP...">
                     <div id="txtCep"></div>
                     <button onclick="consultarCep()" type="button" cep()>Consultar</button>
-                    <hr></hr>
+                    <hr>
                 </div>
                 <div class="campos-form">
                     <label for="endereco">Endereço:</label>
